--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <script src="js/task01.js"></script> -->
   <!-- <script src="js/task02.js"></script> -->
-  <script src="js/task03.js"></script>
+  <!-- <script src="js/task03.js"></script> -->
+  <script src="js/hardTask.js"></script>
   <title>Arrays</title>
 </head>
 <body>
